add_stats-tom from Tom Repo
